# rainbot

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  bot.py  config.py  deploy.sh  index.html  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  test_aimod_fix.py
.github/workflows/: linting.yml  update-database.yml
cogs/: commands.py  detections.py  events_announcer.py  giveaway.py  logs.py  moderation.py  roles.py  setup.py  tags.py  utils.py
ext/: command.py  context.py  database.py  emojis.txt  errors.py  openai_helper.py  paginator.py  safe_send.py  state.py  time.py  utility.py  utils.py
rainbot/: config.py  main.py
rainbot/cogs/: ai_moderation.py  detections.py  events_announcer.py  giveaway.py  logs.py  moderation.py  roles.py  setup.py  tags.py  utils.py
rainbot/ext/: command.py  paginator.py  permissions.py  utility.py
rainbot/services/: database.py
rainbot_modernized/: .env.example  .gitignore  README.md  __init__.py  main.py  requirements.txt
rainbot_modernized/config/: config.py
rainbot_modernized/core/: __init__.py  bot.py  database.py  logging.py  permissions.py
rainbot_modernized/extensions/: __init__.py  aimoderation.py  automod.py  config.py  detections.py  events_announcer.py  giveaways.py  help.py  logs.py  moderation.py  notes.py  reminders.py  roles.py  setup.py  tags.py  utils.py
rainbot_modernized/utils/: __init__.py  constants.py  converters.py  decorators.py  errors.py  helpers.py  helpers_extended.py  paginator.py  safe_send.py  time.py
stubs/bson/: __init__.pyi  code.pyi  codec_options.pyi  dbref.pyi  json_util.pyi  raw_bson.pyi  son.pyi
stubs/pymongo/: __init__.pyi  auth.pyi  bulk.pyi  change_stream.pyi  client_options.pyi  client_session.pyi  collation.pyi  collection.pyi  command_cursor.pyi  common.pyi  compression_support.pyi  cursor.pyi  cursor_manager.pyi  database.pyi  driver_info.pyi  errors.pyi  ismaster.pyi  max_staleness_selectors.pyi  message.pyi  mongo_client.pyi  mongo_replica_set_client.pyi  monitor.pyi  monitoring.pyi  network.pyi  operations.pyi  periodic_executor.pyi  pool.pyi  read_concern.pyi  read_preferences.pyi  response.pyi  results.pyi  server.pyi  server_description.pyi  server_selectors.pyi  server_type.pyi  settings.pyi  son_manipulator.pyi  ssl_context.pyi  ssl_match_hostname.pyi  thread_util.pyi  (+4 more)
